--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Company Header -->
 	<div class="staticheader">
 	  <div class="flex-container">
-	    <img src="resources/images/logo.png">
+	    <img src="./resources/images/logo.png">
 	    <span class="logotext">SECRET AGENT SUPPLY INC.</span>
 	  </div>
     </div>
@@ -42,19 +42,19 @@
     <div class="products">
   	  <div class="product">
   	    <div class="product-image">
-  	      <img src="/resources/images/pen.png">
+  	      <img src="./resources/images/pen.png">
   	    </div>
   	    <span class="description">Exploding Pen</span>
 	  </div>
   	  <div class="product watch">
   	    <div class="product-image">
-  		  <img src="/resources/images/watch.png">
+  		  <img src="./resources/images/watch.png">
 		</div>
   		<span class="description">Cellular Watch</span>
   	  </div>
   	  <div class="product glasses">
   	    <div class="product-image">
-  	  	  <img src="/resources/images/glasses.png">
+  	  	  <img src="./resources/images/glasses.png">
 		</div>
   	  	  <span class="description">Thermal Glasses</span>
   	    </div>
